@@ -299,13 +299,13 @@ $TCA['tx_adgooglemaps_domain_model_map'] = array(
 				'type' => 'select',
 				'default' => Tx_AdGoogleMapsApi_ControlOptions_MapType::POSITION_TOP_RIGHT,
 				'items' => array (
-					array('LLL:EXT:ad_google_maps/Resources/Private/Language/locallang_tca.xml:tx_adgooglemaps_domain_model_map.controlPosition.top', Tx_AdGoogleMapsApi_ControlOptions_MapType::POSITION_TOP),
+					array('LLL:EXT:ad_google_maps/Resources/Private/Language/locallang_tca.xml:tx_adgooglemaps_domain_model_map.controlPosition.topCenter', Tx_AdGoogleMapsApi_ControlOptions_MapType::POSITION_TOP_CENTER),
 					array('LLL:EXT:ad_google_maps/Resources/Private/Language/locallang_tca.xml:tx_adgooglemaps_domain_model_map.controlPosition.topRight', Tx_AdGoogleMapsApi_ControlOptions_MapType::POSITION_TOP_RIGHT),
-					array('LLL:EXT:ad_google_maps/Resources/Private/Language/locallang_tca.xml:tx_adgooglemaps_domain_model_map.controlPosition.right', Tx_AdGoogleMapsApi_ControlOptions_MapType::POSITION_RIGHT),
+					array('LLL:EXT:ad_google_maps/Resources/Private/Language/locallang_tca.xml:tx_adgooglemaps_domain_model_map.controlPosition.rightCenter', Tx_AdGoogleMapsApi_ControlOptions_MapType::POSITION_RIGHT_CENTER),
 					array('LLL:EXT:ad_google_maps/Resources/Private/Language/locallang_tca.xml:tx_adgooglemaps_domain_model_map.controlPosition.bottomRight', Tx_AdGoogleMapsApi_ControlOptions_MapType::POSITION_BOTTOM_RIGHT),
-					array('LLL:EXT:ad_google_maps/Resources/Private/Language/locallang_tca.xml:tx_adgooglemaps_domain_model_map.controlPosition.bottom', Tx_AdGoogleMapsApi_ControlOptions_MapType::POSITION_BOTTOM),
+					array('LLL:EXT:ad_google_maps/Resources/Private/Language/locallang_tca.xml:tx_adgooglemaps_domain_model_map.controlPosition.bottomCenter', Tx_AdGoogleMapsApi_ControlOptions_MapType::POSITION_BOTTOM_CENTER),
 					array('LLL:EXT:ad_google_maps/Resources/Private/Language/locallang_tca.xml:tx_adgooglemaps_domain_model_map.controlPosition.bottomLeft', Tx_AdGoogleMapsApi_ControlOptions_MapType::POSITION_BOTTOM_LEFT),
-					array('LLL:EXT:ad_google_maps/Resources/Private/Language/locallang_tca.xml:tx_adgooglemaps_domain_model_map.controlPosition.left', Tx_AdGoogleMapsApi_ControlOptions_MapType::POSITION_LEFT),
+					array('LLL:EXT:ad_google_maps/Resources/Private/Language/locallang_tca.xml:tx_adgooglemaps_domain_model_map.controlPosition.leftCenter', Tx_AdGoogleMapsApi_ControlOptions_MapType::POSITION_LEFT_CENTER),
 					array('LLL:EXT:ad_google_maps/Resources/Private/Language/locallang_tca.xml:tx_adgooglemaps_domain_model_map.controlPosition.topLeft', Tx_AdGoogleMapsApi_ControlOptions_MapType::POSITION_TOP_LEFT),
 				),
 			),
@@ -339,13 +339,13 @@ $TCA['tx_adgooglemaps_domain_model_map'] = array(
 				'type' => 'select',
 				'default' => Tx_AdGoogleMapsApi_ControlOptions_Navigation::POSITION_TOP_LEFT,
 				'items' => array (
-					array('LLL:EXT:ad_google_maps/Resources/Private/Language/locallang_tca.xml:tx_adgooglemaps_domain_model_map.controlPosition.top', Tx_AdGoogleMapsApi_ControlOptions_Navigation::POSITION_TOP),
+					array('LLL:EXT:ad_google_maps/Resources/Private/Language/locallang_tca.xml:tx_adgooglemaps_domain_model_map.controlPosition.topCenter', Tx_AdGoogleMapsApi_ControlOptions_Navigation::POSITION_TOP_CENTER),
 					array('LLL:EXT:ad_google_maps/Resources/Private/Language/locallang_tca.xml:tx_adgooglemaps_domain_model_map.controlPosition.topRight', Tx_AdGoogleMapsApi_ControlOptions_Navigation::POSITION_TOP_RIGHT),
-					array('LLL:EXT:ad_google_maps/Resources/Private/Language/locallang_tca.xml:tx_adgooglemaps_domain_model_map.controlPosition.right', Tx_AdGoogleMapsApi_ControlOptions_Navigation::POSITION_RIGHT),
+					array('LLL:EXT:ad_google_maps/Resources/Private/Language/locallang_tca.xml:tx_adgooglemaps_domain_model_map.controlPosition.rightCenter', Tx_AdGoogleMapsApi_ControlOptions_Navigation::POSITION_RIGHT_CENTER),
 					array('LLL:EXT:ad_google_maps/Resources/Private/Language/locallang_tca.xml:tx_adgooglemaps_domain_model_map.controlPosition.bottomRight', Tx_AdGoogleMapsApi_ControlOptions_Navigation::POSITION_BOTTOM_RIGHT),
-					array('LLL:EXT:ad_google_maps/Resources/Private/Language/locallang_tca.xml:tx_adgooglemaps_domain_model_map.controlPosition.bottom', Tx_AdGoogleMapsApi_ControlOptions_Navigation::POSITION_BOTTOM),
+					array('LLL:EXT:ad_google_maps/Resources/Private/Language/locallang_tca.xml:tx_adgooglemaps_domain_model_map.controlPosition.bottomCenter', Tx_AdGoogleMapsApi_ControlOptions_Navigation::POSITION_BOTTOM_CENTER),
 					array('LLL:EXT:ad_google_maps/Resources/Private/Language/locallang_tca.xml:tx_adgooglemaps_domain_model_map.controlPosition.bottomLeft', Tx_AdGoogleMapsApi_ControlOptions_Navigation::POSITION_BOTTOM_LEFT),
-					array('LLL:EXT:ad_google_maps/Resources/Private/Language/locallang_tca.xml:tx_adgooglemaps_domain_model_map.controlPosition.left', Tx_AdGoogleMapsApi_ControlOptions_Navigation::POSITION_LEFT),
+					array('LLL:EXT:ad_google_maps/Resources/Private/Language/locallang_tca.xml:tx_adgooglemaps_domain_model_map.controlPosition.leftCenter', Tx_AdGoogleMapsApi_ControlOptions_Navigation::POSITION_LEFT_CENTER),
 					array('LLL:EXT:ad_google_maps/Resources/Private/Language/locallang_tca.xml:tx_adgooglemaps_domain_model_map.controlPosition.topLeft', Tx_AdGoogleMapsApi_ControlOptions_Navigation::POSITION_TOP_LEFT),
 				),
 			),
@@ -380,13 +380,13 @@ $TCA['tx_adgooglemaps_domain_model_map'] = array(
 				'type' => 'select',
 				'default' => Tx_AdGoogleMapsApi_ControlOptions_Scale::POSITION_BOTTOM_LEFT,
 				'items' => array (
-					array('LLL:EXT:ad_google_maps/Resources/Private/Language/locallang_tca.xml:tx_adgooglemaps_domain_model_map.controlPosition.top', Tx_AdGoogleMapsApi_ControlOptions_Scale::POSITION_TOP),
+					array('LLL:EXT:ad_google_maps/Resources/Private/Language/locallang_tca.xml:tx_adgooglemaps_domain_model_map.controlPosition.topCenter', Tx_AdGoogleMapsApi_ControlOptions_Scale::POSITION_TOP_CENTER),
 					array('LLL:EXT:ad_google_maps/Resources/Private/Language/locallang_tca.xml:tx_adgooglemaps_domain_model_map.controlPosition.topRight', Tx_AdGoogleMapsApi_ControlOptions_Scale::POSITION_TOP_RIGHT),
-					array('LLL:EXT:ad_google_maps/Resources/Private/Language/locallang_tca.xml:tx_adgooglemaps_domain_model_map.controlPosition.right', Tx_AdGoogleMapsApi_ControlOptions_Scale::POSITION_RIGHT),
+					array('LLL:EXT:ad_google_maps/Resources/Private/Language/locallang_tca.xml:tx_adgooglemaps_domain_model_map.controlPosition.rightCenter', Tx_AdGoogleMapsApi_ControlOptions_Scale::POSITION_RIGHT_CENTER),
 					array('LLL:EXT:ad_google_maps/Resources/Private/Language/locallang_tca.xml:tx_adgooglemaps_domain_model_map.controlPosition.bottomRight', Tx_AdGoogleMapsApi_ControlOptions_Scale::POSITION_BOTTOM_RIGHT),
-					array('LLL:EXT:ad_google_maps/Resources/Private/Language/locallang_tca.xml:tx_adgooglemaps_domain_model_map.controlPosition.bottom', Tx_AdGoogleMapsApi_ControlOptions_Scale::POSITION_BOTTOM),
+					array('LLL:EXT:ad_google_maps/Resources/Private/Language/locallang_tca.xml:tx_adgooglemaps_domain_model_map.controlPosition.bottomCenter', Tx_AdGoogleMapsApi_ControlOptions_Scale::POSITION_BOTTOM_CENTER),
 					array('LLL:EXT:ad_google_maps/Resources/Private/Language/locallang_tca.xml:tx_adgooglemaps_domain_model_map.controlPosition.bottomLeft', Tx_AdGoogleMapsApi_ControlOptions_Scale::POSITION_BOTTOM_LEFT),
-					array('LLL:EXT:ad_google_maps/Resources/Private/Language/locallang_tca.xml:tx_adgooglemaps_domain_model_map.controlPosition.left', Tx_AdGoogleMapsApi_ControlOptions_Scale::POSITION_LEFT),
+					array('LLL:EXT:ad_google_maps/Resources/Private/Language/locallang_tca.xml:tx_adgooglemaps_domain_model_map.controlPosition.leftCenter', Tx_AdGoogleMapsApi_ControlOptions_Scale::POSITION_LEFT_CENTER),
 					array('LLL:EXT:ad_google_maps/Resources/Private/Language/locallang_tca.xml:tx_adgooglemaps_domain_model_map.controlPosition.topLeft', Tx_AdGoogleMapsApi_ControlOptions_Scale::POSITION_TOP_LEFT),
 				),
 			),
@@ -418,13 +418,13 @@ $TCA['tx_adgooglemaps_domain_model_map'] = array(
 				'type' => 'select',
 				'default' => Tx_AdGoogleMapsApi_ControlOptions_Pan::POSITION_TOP_LEFT,
 				'items' => array (
-					array('LLL:EXT:ad_google_maps/Resources/Private/Language/locallang_tca.xml:tx_adgooglemaps_domain_model_map.controlPosition.top', Tx_AdGoogleMapsApi_ControlOptions_Pan::POSITION_TOP),
+					array('LLL:EXT:ad_google_maps/Resources/Private/Language/locallang_tca.xml:tx_adgooglemaps_domain_model_map.controlPosition.topCenter', Tx_AdGoogleMapsApi_ControlOptions_Pan::POSITION_TOP_CENTER),
 					array('LLL:EXT:ad_google_maps/Resources/Private/Language/locallang_tca.xml:tx_adgooglemaps_domain_model_map.controlPosition.topRight', Tx_AdGoogleMapsApi_ControlOptions_Pan::POSITION_TOP_RIGHT),
-					array('LLL:EXT:ad_google_maps/Resources/Private/Language/locallang_tca.xml:tx_adgooglemaps_domain_model_map.controlPosition.right', Tx_AdGoogleMapsApi_ControlOptions_Pan::POSITION_RIGHT),
+					array('LLL:EXT:ad_google_maps/Resources/Private/Language/locallang_tca.xml:tx_adgooglemaps_domain_model_map.controlPosition.rightCenter', Tx_AdGoogleMapsApi_ControlOptions_Pan::POSITION_RIGHT_CENTER),
 					array('LLL:EXT:ad_google_maps/Resources/Private/Language/locallang_tca.xml:tx_adgooglemaps_domain_model_map.controlPosition.bottomRight', Tx_AdGoogleMapsApi_ControlOptions_Pan::POSITION_BOTTOM_RIGHT),
-					array('LLL:EXT:ad_google_maps/Resources/Private/Language/locallang_tca.xml:tx_adgooglemaps_domain_model_map.controlPosition.bottom', Tx_AdGoogleMapsApi_ControlOptions_Pan::POSITION_BOTTOM),
+					array('LLL:EXT:ad_google_maps/Resources/Private/Language/locallang_tca.xml:tx_adgooglemaps_domain_model_map.controlPosition.bottomCenter', Tx_AdGoogleMapsApi_ControlOptions_Pan::POSITION_BOTTOM_CENTER),
 					array('LLL:EXT:ad_google_maps/Resources/Private/Language/locallang_tca.xml:tx_adgooglemaps_domain_model_map.controlPosition.bottomLeft', Tx_AdGoogleMapsApi_ControlOptions_Pan::POSITION_BOTTOM_LEFT),
-					array('LLL:EXT:ad_google_maps/Resources/Private/Language/locallang_tca.xml:tx_adgooglemaps_domain_model_map.controlPosition.left', Tx_AdGoogleMapsApi_ControlOptions_Pan::POSITION_LEFT),
+					array('LLL:EXT:ad_google_maps/Resources/Private/Language/locallang_tca.xml:tx_adgooglemaps_domain_model_map.controlPosition.leftCenter', Tx_AdGoogleMapsApi_ControlOptions_Pan::POSITION_LEFT_CENTER),
 					array('LLL:EXT:ad_google_maps/Resources/Private/Language/locallang_tca.xml:tx_adgooglemaps_domain_model_map.controlPosition.topLeft', Tx_AdGoogleMapsApi_ControlOptions_Pan::POSITION_TOP_LEFT),
 				),
 			),
@@ -444,13 +444,13 @@ $TCA['tx_adgooglemaps_domain_model_map'] = array(
 				'type' => 'select',
 				'default' => Tx_AdGoogleMapsApi_ControlOptions_Zoom::POSITION_BOTTOM_LEFT,
 				'items' => array (
-					array('LLL:EXT:ad_google_maps/Resources/Private/Language/locallang_tca.xml:tx_adgooglemaps_domain_model_map.controlPosition.top', Tx_AdGoogleMapsApi_ControlOptions_Zoom::POSITION_TOP),
+					array('LLL:EXT:ad_google_maps/Resources/Private/Language/locallang_tca.xml:tx_adgooglemaps_domain_model_map.controlPosition.topCenter', Tx_AdGoogleMapsApi_ControlOptions_Zoom::POSITION_TOP_CENTER),
 					array('LLL:EXT:ad_google_maps/Resources/Private/Language/locallang_tca.xml:tx_adgooglemaps_domain_model_map.controlPosition.topRight', Tx_AdGoogleMapsApi_ControlOptions_Zoom::POSITION_TOP_RIGHT),
-					array('LLL:EXT:ad_google_maps/Resources/Private/Language/locallang_tca.xml:tx_adgooglemaps_domain_model_map.controlPosition.right', Tx_AdGoogleMapsApi_ControlOptions_Zoom::POSITION_RIGHT),
+					array('LLL:EXT:ad_google_maps/Resources/Private/Language/locallang_tca.xml:tx_adgooglemaps_domain_model_map.controlPosition.rightCenter', Tx_AdGoogleMapsApi_ControlOptions_Zoom::POSITION_RIGHT_CENTER),
 					array('LLL:EXT:ad_google_maps/Resources/Private/Language/locallang_tca.xml:tx_adgooglemaps_domain_model_map.controlPosition.bottomRight', Tx_AdGoogleMapsApi_ControlOptions_Zoom::POSITION_BOTTOM_RIGHT),
-					array('LLL:EXT:ad_google_maps/Resources/Private/Language/locallang_tca.xml:tx_adgooglemaps_domain_model_map.controlPosition.bottom', Tx_AdGoogleMapsApi_ControlOptions_Zoom::POSITION_BOTTOM),
+					array('LLL:EXT:ad_google_maps/Resources/Private/Language/locallang_tca.xml:tx_adgooglemaps_domain_model_map.controlPosition.bottomCenter', Tx_AdGoogleMapsApi_ControlOptions_Zoom::POSITION_BOTTOM_CENTER),
 					array('LLL:EXT:ad_google_maps/Resources/Private/Language/locallang_tca.xml:tx_adgooglemaps_domain_model_map.controlPosition.bottomLeft', Tx_AdGoogleMapsApi_ControlOptions_Zoom::POSITION_BOTTOM_LEFT),
-					array('LLL:EXT:ad_google_maps/Resources/Private/Language/locallang_tca.xml:tx_adgooglemaps_domain_model_map.controlPosition.left', Tx_AdGoogleMapsApi_ControlOptions_Zoom::POSITION_LEFT),
+					array('LLL:EXT:ad_google_maps/Resources/Private/Language/locallang_tca.xml:tx_adgooglemaps_domain_model_map.controlPosition.leftCenter', Tx_AdGoogleMapsApi_ControlOptions_Zoom::POSITION_LEFT_CENTER),
 					array('LLL:EXT:ad_google_maps/Resources/Private/Language/locallang_tca.xml:tx_adgooglemaps_domain_model_map.controlPosition.topLeft', Tx_AdGoogleMapsApi_ControlOptions_Zoom::POSITION_TOP_LEFT),
 				),
 			),
@@ -484,13 +484,13 @@ $TCA['tx_adgooglemaps_domain_model_map'] = array(
 				'type' => 'select',
 				'default' => Tx_AdGoogleMapsApi_ControlOptions_StreetView::POSITION_TOP_LEFT,
 				'items' => array (
-					array('LLL:EXT:ad_google_maps/Resources/Private/Language/locallang_tca.xml:tx_adgooglemaps_domain_model_map.controlPosition.top', Tx_AdGoogleMapsApi_ControlOptions_StreetView::POSITION_TOP),
+					array('LLL:EXT:ad_google_maps/Resources/Private/Language/locallang_tca.xml:tx_adgooglemaps_domain_model_map.controlPosition.topCenter', Tx_AdGoogleMapsApi_ControlOptions_StreetView::POSITION_TOP_CENTER),
 					array('LLL:EXT:ad_google_maps/Resources/Private/Language/locallang_tca.xml:tx_adgooglemaps_domain_model_map.controlPosition.topRight', Tx_AdGoogleMapsApi_ControlOptions_StreetView::POSITION_TOP_RIGHT),
-					array('LLL:EXT:ad_google_maps/Resources/Private/Language/locallang_tca.xml:tx_adgooglemaps_domain_model_map.controlPosition.right', Tx_AdGoogleMapsApi_ControlOptions_StreetView::POSITION_RIGHT),
+					array('LLL:EXT:ad_google_maps/Resources/Private/Language/locallang_tca.xml:tx_adgooglemaps_domain_model_map.controlPosition.rightCenter', Tx_AdGoogleMapsApi_ControlOptions_StreetView::POSITION_RIGHT_CENTER),
 					array('LLL:EXT:ad_google_maps/Resources/Private/Language/locallang_tca.xml:tx_adgooglemaps_domain_model_map.controlPosition.bottomRight', Tx_AdGoogleMapsApi_ControlOptions_StreetView::POSITION_BOTTOM_RIGHT),
-					array('LLL:EXT:ad_google_maps/Resources/Private/Language/locallang_tca.xml:tx_adgooglemaps_domain_model_map.controlPosition.bottom', Tx_AdGoogleMapsApi_ControlOptions_StreetView::POSITION_BOTTOM),
+					array('LLL:EXT:ad_google_maps/Resources/Private/Language/locallang_tca.xml:tx_adgooglemaps_domain_model_map.controlPosition.bottomCenter', Tx_AdGoogleMapsApi_ControlOptions_StreetView::POSITION_BOTTOM_CENTER),
 					array('LLL:EXT:ad_google_maps/Resources/Private/Language/locallang_tca.xml:tx_adgooglemaps_domain_model_map.controlPosition.bottomLeft', Tx_AdGoogleMapsApi_ControlOptions_StreetView::POSITION_BOTTOM_LEFT),
-					array('LLL:EXT:ad_google_maps/Resources/Private/Language/locallang_tca.xml:tx_adgooglemaps_domain_model_map.controlPosition.left', Tx_AdGoogleMapsApi_ControlOptions_StreetView::POSITION_LEFT),
+					array('LLL:EXT:ad_google_maps/Resources/Private/Language/locallang_tca.xml:tx_adgooglemaps_domain_model_map.controlPosition.leftCenter', Tx_AdGoogleMapsApi_ControlOptions_StreetView::POSITION_LEFT_CENTER),
 					array('LLL:EXT:ad_google_maps/Resources/Private/Language/locallang_tca.xml:tx_adgooglemaps_domain_model_map.controlPosition.topLeft', Tx_AdGoogleMapsApi_ControlOptions_StreetView::POSITION_TOP_LEFT),
 				),
 			),
