@@ -15,3 +15,4 @@
 		[TASK] Complete documentation.
 		[TASK] Tx_AdGoogleMaps_Domain_Model_Category->getSubCategories changed.
 		[TASK] Changed upload directory to default uploads/tx_adgooglemaps/.
+		[TASK] Changed control position constants name in tca.php.
